--- a/materials/index.html
+++ b/materials/index.html
@@ -1,53 +1,131 @@
+a
+
 <!doctype html>
 <html lang="es">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Ciencia de materiales · LW Gems Lab</title>
-  <meta name="description" content="Ciencia de materiales aplicada a gemas y metales: defectos, coherencia óptica, microestructura." />
+
+  <title>Ciencia de materiales · GOLD NODE</title>
+  <meta name="description" content="Ciencia de materiales aplicada a gemas y metales. Oro (Au), Diamante (C) y Corindón (Al₂O₃): estructura, defectos, coherencia óptica y comportamiento material." />
+
   <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 
-<body class="page-materials">
-  <header class="topbar topbar--plain">
-    <div class="container">
-      <div class="brand">
-        <a class="brandName" href="/" aria-label="GOLD NODE Home">GOLD NODE</a>
-        <span class="brandTag">non-commercial</span>
-      </div>
+<body>
 
-      <nav class="menu" aria-label="Primary">
-        <a href="/">Lab Home</a>
-        <a aria-current="page" href="/materials/">Ciencia de materiales</a>
-        <a href="/lab-notes/">Notas técnicas</a>
-        <a href="https://lw-gems.com" target="_blank" rel="noopener">LW Gems</a>
-      </nav>
+<header>
+  <div class="container nav">
+    <div class="brand">
+      <span class="pill">
+        <span class="dot"></span>
+        <span class="mono">GOLD NODE</span>
+      </span>
+      <span class="mono" style="color:#64748b;font-size:12px">non-commercial</span>
     </div>
-  </header>
 
-  <main>
+    <nav class="menu mono" aria-label="Primary">
+      <a href="/">Lab Home</a>
+      <a href="/ciencia-de-materiales/">Ciencia de materiales</a>
+      <a href="/lab-notes/">Notas técnicas</a>
+      <a href="https://lw-gems.com" target="_blank" rel="noopener">LW Gems</a>
+    </nav>
+  </div>
+</header>
+
+<main class="container">
+  <section style="margin-top:48px">
+    <div class="eyebrow mono">ARCHIVO · FUNDAMENTOS</div>
     <h1>Ciencia de materiales</h1>
-    <p class="muted">Ciencia de materiales aplicada a gemas y metales: defectos, coherencia óptica, microestructura.</p>
+    <p class="lead">
+      Fundamentos físicos y estructurales de materiales clave del laboratorio. La unidad primaria es el material
+      (no el fenómeno): cada archivo integra estructura, defectos y comportamiento.
+    </p>
+  </section>
 
-    <section>
-      <h2 class="sectionTitle">Áreas</h2>
+  <!-- ORO (Au) -->
+  <section style="margin-top:40px">
+    <h2>Oro (Au)</h2>
 
-      <ul class="gridList">
-        <li><a class="chipLink" href="#">Crystal growth environment</a></li>
-        <li><a class="chipLink" href="#">Defect density</a></li>
-        <li><a class="chipLink" href="#">Optical coherence</a></li>
-        <li><a class="chipLink" href="#">Micro-structural variance</a></li>
-        <li><a class="chipLink" href="#">Surface scattering</a></li>
-        <li><a class="chipLink" href="#">Light diffusion vs reflection</a></li>
-        <li><a class="chipLink" href="#">Material fatigue</a></li>
-      </ul>
-    </section>
-  </main>
+    <ul class="notes-list">
+      <li>
+        <a href="/ciencia-de-materiales/oro-au/morfologia-natural-oro.html">
+          Morfología natural del oro y su lectura material
+        </a>
+        <div class="muted" style="margin-top:6px">
+          Formas de ocurrencia primaria y secundaria, geometrías no ideales y relación entre proceso y forma observable.
+        </div>
+      </li>
 
-  <footer>
-    <div class="container">
-      <small class="small">LW Gems · Material Science</small>
-    </div>
-  </footer>
+      <li>
+        <a href="/ciencia-de-materiales/oro-au/estructura-cristalina-comportamiento-oro.html">
+          Estructura cristalina del oro y comportamiento mecánico
+        </a>
+        <div class="muted" style="margin-top:6px">
+          Red cristalina FCC, deslizamiento atómico y su impacto en ductilidad, conformado y estabilidad material.
+        </div>
+      </li>
+    </ul>
+  </section>
+
+  <!-- DIAMANTE (C) -->
+  <section style="margin-top:40px">
+    <h2>Diamante (C)</h2>
+
+    <ul class="notes-list">
+      <li>
+        <a href="/ciencia-de-materiales/diamante-c/crecimiento-cristalino-diamante.html">
+          Crecimiento cristalino del diamante: entorno y huella interna
+        </a>
+        <div class="muted" style="margin-top:6px">
+          Condiciones de formación, cinética de crecimiento y cómo el entorno queda registrado en el cristal.
+        </div>
+      </li>
+
+      <li>
+        <a href="/ciencia-de-materiales/diamante-c/defectos-y-coherencia-optica-diamante.html">
+          Defectos y coherencia óptica en diamante
+        </a>
+        <div class="muted" style="margin-top:6px">
+          Defect density, centros de color y dispersión: impacto directo en transparencia, brillo y rendimiento óptico.
+        </div>
+      </li>
+    </ul>
+  </section>
+
+  <!-- CORINDÓN (Al2O3) -->
+  <section style="margin-top:40px">
+    <h2>Corindón (Al₂O₃)</h2>
+
+    <ul class="notes-list">
+      <li>
+        <a href="/ciencia-de-materiales/corindon-al2o3/estructura-cristalina-corindon.html">
+          Estructura cristalina del corindón y propiedades base
+        </a>
+        <div class="muted" style="margin-top:6px">
+          Red trigonal, anisotropías y relación entre estructura y comportamiento físico del material.
+        </div>
+      </li>
+
+      <li>
+        <a href="/ciencia-de-materiales/corindon-al2o3/defectos-cromoforos-y-color.html">
+          Defectos cromóforos y origen del color en corindón
+        </a>
+        <div class="muted" style="margin-top:6px">
+          Cr, Fe, Ti y mecanismos de absorción: cómo el crecimiento y los defectos controlan color y zonación.
+        </div>
+      </li>
+    </ul>
+  </section>
+
+  <div style="margin-top:48px">
+    <a href="/" class="mono">← Volver al laboratorio</a>
+  </div>
+</main>
+
+<footer class="container muted" style="margin:80px auto 40px">
+  GOLD NODE · Material Science
+</footer>
+
 </body>
 </html>
