--- a/materials/index.html
+++ b/materials/index.html
@@ -1,3 +1,5 @@
+p
+
 <!doctype html>
 <html lang="es">
 <head>
@@ -5,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <title>Ciencia de materiales · GOLD NODE</title>
-  <meta name="description" content="Ciencia de materiales aplicada a gemas y metales. Oro (Au), Diamante (C) y Corindón (Al₂O₃): estructura, defectos, coherencia óptica y comportamiento material." />
+  <meta name="description" content="Fundamentos físicos y estructurales de materiales clave del laboratorio: Oro (Au), Diamante (C) y Corindón (Al₂O₃). Estructura, defectos y comportamiento." />
 
   <link rel="stylesheet" href="/assets/css/style.css">
 </head>
@@ -15,10 +17,7 @@
 <header>
   <div class="container nav">
     <div class="brand">
-      <span class="pill">
-        <span class="dot"></span>
-        <span class="mono">GOLD NODE</span>
-      </span>
+      <span class="pill"><span class="dot"></span><span class="mono">GOLD NODE</span></span>
       <span class="mono" style="color:#64748b;font-size:12px">non-commercial</span>
     </div>
 
@@ -36,84 +35,66 @@
     <div class="eyebrow mono">ARCHIVO · FUNDAMENTOS</div>
     <h1>Ciencia de materiales</h1>
     <p class="lead">
-      Fundamentos físicos y estructurales de materiales clave del laboratorio. La unidad primaria es el material
-      (no el fenómeno): cada archivo integra estructura, defectos y comportamiento.
+      Fundamentos físicos y estructurales de materiales clave del laboratorio. La unidad primaria es el material (no el fenómeno):
+      cada archivo integra estructura, defectos y comportamiento.
     </p>
   </section>
 
-  <!-- ORO (Au) -->
+  <!-- ORO -->
   <section style="margin-top:40px">
     <h2>Oro (Au)</h2>
 
-    <ul class="notes-list">
-      <li>
-        <a href="/ciencia-de-materiales/oro-au/morfologia-natural-oro.html">
-          Morfología natural del oro y su lectura material
-        </a>
-        <div class="muted" style="margin-top:6px">
-          Formas de ocurrencia primaria y secundaria, geometrías no ideales y relación entre proceso y forma observable.
-        </div>
-      </li>
+    <div class="ms-grid">
+      <a class="ms-card" href="/ciencia-de-materiales/oro-au/morfologia-natural-oro.html">
+        <div class="ms-title">Morfología natural del oro y su lectura material</div>
+        <div class="ms-desc">Formas de ocurrencia primaria y secundaria, geometrías no ideales y relación entre proceso y forma observable.</div>
+        <div class="ms-meta mono">MATERIAL SCIENCE · ORO (AU)</div>
+      </a>
 
-      <li>
-        <a href="/ciencia-de-materiales/oro-au/estructura-cristalina-comportamiento-oro.html">
-          Estructura cristalina del oro y comportamiento mecánico
-        </a>
-        <div class="muted" style="margin-top:6px">
-          Red cristalina FCC, deslizamiento atómico y su impacto en ductilidad, conformado y estabilidad material.
-        </div>
-      </li>
-    </ul>
+      <a class="ms-card" href="/ciencia-de-materiales/oro-au/estructura-cristalina-comportamiento-oro.html">
+        <div class="ms-title">Estructura cristalina del oro y comportamiento mecánico</div>
+        <div class="ms-desc">Red cristalina FCC, deslizamiento atómico y su impacto en ductilidad, conformado y estabilidad material.</div>
+        <div class="ms-meta mono">MATERIAL SCIENCE · ORO (AU)</div>
+      </a>
+    </div>
   </section>
 
-  <!-- DIAMANTE (C) -->
+  <!-- DIAMANTE -->
   <section style="margin-top:40px">
     <h2>Diamante (C)</h2>
 
-    <ul class="notes-list">
-      <li>
-        <a href="/ciencia-de-materiales/diamante-c/crecimiento-cristalino-diamante.html">
-          Crecimiento cristalino del diamante: entorno y huella interna
-        </a>
-        <div class="muted" style="margin-top:6px">
-          Condiciones de formación, cinética de crecimiento y cómo el entorno queda registrado en el cristal.
-        </div>
-      </li>
+    <div class="ms-grid">
+      <a class="ms-card" href="/ciencia-de-materiales/diamante-c/crecimiento-cristalino-diamante.html">
+        <div class="ms-title">Crecimiento cristalino del diamante: entorno y huella interna</div>
+        <div class="ms-desc">Condiciones de formación, cinética de crecimiento y cómo el entorno queda registrado en el cristal.</div>
+        <div class="ms-meta mono">MATERIAL SCIENCE · DIAMANTE (C)</div>
+      </a>
 
-      <li>
-        <a href="/ciencia-de-materiales/diamante-c/defectos-y-coherencia-optica-diamante.html">
-          Defectos y coherencia óptica en diamante
-        </a>
-        <div class="muted" style="margin-top:6px">
-          Defect density, centros de color y dispersión: impacto directo en transparencia, brillo y rendimiento óptico.
-        </div>
-      </li>
-    </ul>
+      <a class="ms-card" href="/ciencia-de-materiales/diamante-c/defectos-y-coherencia-optica-diamante.html">
+        <div class="ms-title">Defectos y coherencia óptica en diamante</div>
+        <div class="ms-desc">Defect density, centros de color y dispersión: impacto directo en transparencia, brillo y rendimiento óptico.</div>
+        <div class="ms-meta mono">MATERIAL SCIENCE · DIAMANTE (C)</div>
+      </a>
+    </div>
   </section>
 
-  <!-- CORINDÓN (Al2O3) -->
+  <!-- CORINDÓN -->
   <section style="margin-top:40px">
     <h2>Corindón (Al₂O₃)</h2>
 
-    <ul class="notes-list">
-      <li>
-        <a href="/ciencia-de-materiales/corindon-al2o3/estructura-cristalina-corindon.html">
-          Estructura cristalina del corindón y propiedades base
-        </a>
-        <div class="muted" style="margin-top:6px">
-          Red trigonal, anisotropías y relación entre estructura y comportamiento físico del material.
-        </div>
-      </li>
+    <div class="ms-grid">
+      <a class="ms-card" href="/ciencia-de-materiales/corindon-al2o3/estructura-cristalina-corindon.html">
+        <div class="ms-title">Estructura cristalina del corindón y propiedades base</div>
+        <div class="ms-desc">Red trigonal, anisotropías y relación entre estructura y comportamiento físico del material.</div>
+        <div class="ms-meta mono">MATERIAL SCIENCE · CORINDÓN (AL₂O₃)</div>
+      </a>
 
-      <li>
-        <a href="/ciencia-de-materiales/corindon-al2o3/defectos-cromoforos-y-color.html">
-          Defectos cromóforos y origen del color en corindón
-        </a>
-        <div class="muted" style="margin-top:6px">
-          Cr, Fe, Ti y mecanismos de absorción: cómo el crecimiento y los defectos controlan color y zonación.
-        </div>
-      </li>
-    </ul>
+      <a class="ms-card" href="/ciencia-de-materiales/corindon-al2o3/defectos-cromoforos-y-color.html">
+        <div class="ms-title">Defectos cromóforos y origen del color en corindón</div>
+        <div class="ms-desc">Cr, Fe, Ti y mecanismos de absorción: cómo el crecimiento y los defectos controlan color y zonación.</div>
+        <div class="ms-meta mono">MATERIAL SCIENCE · CORINDÓN (AL₂O₃)</div>
+      </a>
+    </div>
   </section>
 
   <div style="margin-top:48px">
