--- a/materials/oro/index.html
+++ b/materials/oro/index.html
@@ -34,7 +34,7 @@
   <meta name="lw:note-version" content="1.0.0">
   <meta name="lw:note-status" content="canonical">
 
-  <!-- 6–7: JSON-LD + 9 fechas (si querés, acá solo dateModified) + 10 @id conectado + 15–17 author/publisher/isPartOf/about -->
+  <!-- 6–7: JSON-LD + 10 @id conectado + 15–17 author/publisher/isPartOf/about -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -82,11 +82,20 @@
   <header class="topbar" role="banner">
     <div class="container">
       <nav class="topnav" aria-label="Navegación principal">
-        <a href="/" class="brand">GOLD NODE</a>
+        <!-- FIX: absoluto -->
+        <a href="https://gold.lw-gems.com/" class="brand">GOLD NODE</a>
+
         <div class="navlinks">
-          <a href="/lab-home/">Lab Home</a>
-          <a href="/materials/" aria-current="page">Materials</a>
-          <a href="/lab-notes/">Notas técnicas</a>
+          <!-- FIX: Lab Home real -->
+          <a href="https://gold.lw-gems.com/">Lab Home</a>
+
+          <!-- FIX: Materials -->
+          <a href="https://gold.lw-gems.com/materials/" aria-current="page">Materials</a>
+
+          <!-- FIX: Notas -->
+          <a href="https://gold.lw-gems.com/lab-notes/">Notas técnicas</a>
+
+          <!-- Sitio comercial -->
           <a href="https://lw-gems.com/">LW Gems</a>
         </div>
       </nav>
@@ -121,25 +130,26 @@
         <h2>Notas del material</h2>
 
         <div class="note-grid">
-          <a class="note-card" href="./morfologia-natural-del-oro.html">
+          <!-- RECOMENDADO: rutas canon (sin .html) -->
+          <a class="note-card" href="https://gold.lw-gems.com/lab-notes/oro/morfologia-natural-del-oro/">
             <h3>Morfología natural del oro y su lectura material</h3>
             <p>Ocurrencia primaria/secundaria, geometrías no ideales y relación entre proceso y forma observable.</p>
             <span class="tag">MATERIAL · ORO (Au)</span>
           </a>
 
-          <a class="note-card" href="./estructura-cristalina-del-oro.html">
+          <a class="note-card" href="https://gold.lw-gems.com/lab-notes/oro/estructura-cristalina-del-oro/">
             <h3>Estructura cristalina del oro y comportamiento mecánico</h3>
             <p>Red FCC, deslizamiento atómico y su impacto en ductilidad, conformado y estabilidad material.</p>
             <span class="tag">MATERIAL · ORO (Au)</span>
           </a>
 
-          <a class="note-card" href="./fatiga-material-en-oro.html">
+          <a class="note-card" href="https://gold.lw-gems.com/lab-notes/oro/fatiga-material-en-oro/">
             <h3>Fatiga material en oro bajo uso prolongado</h3>
             <p>Microdeformaciones repetidas, concentradores de tensión, signos tempranos y prevención.</p>
             <span class="tag">LAB NOTE · ORO (Au)</span>
           </a>
 
-          <a class="note-card" href="./superficie-y-desgaste-del-oro.html">
+          <a class="note-card" href="https://gold.lw-gems.com/lab-notes/oro/superficie-y-desgaste-del-oro/">
             <h3>Superficie y desgaste del oro en uso técnico</h3>
             <p>Acabado superficial, fricción, desgaste progresivo y lectura material aplicada.</p>
             <span class="tag">LAB NOTE · ORO (Au)</span>
@@ -147,7 +157,7 @@
         </div>
 
         <p style="margin-top:18px">
-          <a class="backlink" href="/materials/">← Volver a Materials</a>
+          <a class="backlink" href="https://gold.lw-gems.com/materials/">← Volver a Materials</a>
         </p>
       </section>
     </article>
