--- a/materials/index.html
+++ b/materials/index.html
@@ -89,17 +89,13 @@
   <header class="topbar" role="banner">
     <div class="container">
       <nav class="topnav" aria-label="Navegación principal">
-        <!-- Absoluto: evita ambigüedad con rewrites -->
+        <!-- Home real del nodo -->
         <a href="https://gold.lw-gems.com/" class="brand">GOLD NODE</a>
 
         <div class="navlinks">
-          <!-- FIX: Lab Home real es la raíz del subdominio -->
           <a href="https://gold.lw-gems.com/">Lab Home</a>
-
-          <a href="https://gold.lw-gems.com/materials/" aria-current="page">Materials</a>
+          <a href="https://gold.lw-gems.com/materials/">Materials</a>
           <a href="https://gold.lw-gems.com/lab-notes/">Notas técnicas</a>
-
-          <!-- Sitio comercial: absoluto -->
           <a href="https://lw-gems.com/">LW Gems</a>
         </div>
       </nav>
