--- a/materials/oro/index.html
+++ b/materials/oro/index.html
@@ -128,33 +128,30 @@
 
       <section class="lw-profile__notes">
         <h2>Notas del material</h2>
+<div class="note-grid">
 
-        <div class="note-grid">
-          <!-- RECOMENDADO: rutas canon (sin .html) -->
-          <a class="note-card" href="https://gold.lw-gems.com/lab-notes/oro/morfologia-natural-del-oro/">
-            <h3>Morfología natural del oro y su lectura material</h3>
-            <p>Ocurrencia primaria/secundaria, geometrías no ideales y relación entre proceso y forma observable.</p>
-            <span class="tag">MATERIAL · ORO (Au)</span>
-          </a>
+  <a class="note-card"
+     href="https://gold.lw-gems.com/lab-notes/oro/morfologia-natural-del-oro/">
+    …
+  </a>
 
-          <a class="note-card" href="https://gold.lw-gems.com/lab-notes/oro/estructura-cristalina-del-oro/">
-            <h3>Estructura cristalina del oro y comportamiento mecánico</h3>
-            <p>Red FCC, deslizamiento atómico y su impacto en ductilidad, conformado y estabilidad material.</p>
-            <span class="tag">MATERIAL · ORO (Au)</span>
-          </a>
+  <a class="note-card"
+     href="https://gold.lw-gems.com/lab-notes/oro/estructura-cristalina-del-oro/">
+    …
+  </a>
 
-          <a class="note-card" href="https://gold.lw-gems.com/lab-notes/oro/fatiga-material-en-oro/">
-            <h3>Fatiga material en oro bajo uso prolongado</h3>
-            <p>Microdeformaciones repetidas, concentradores de tensión, signos tempranos y prevención.</p>
-            <span class="tag">LAB NOTE · ORO (Au)</span>
-          </a>
+  <a class="note-card"
+     href="https://gold.lw-gems.com/lab-notes/oro/fatiga-material-en-oro/">
+    …
+  </a>
 
-          <a class="note-card" href="https://gold.lw-gems.com/lab-notes/oro/superficie-y-desgaste-del-oro/">
-            <h3>Superficie y desgaste del oro en uso técnico</h3>
-            <p>Acabado superficial, fricción, desgaste progresivo y lectura material aplicada.</p>
-            <span class="tag">LAB NOTE · ORO (Au)</span>
-          </a>
-        </div>
+  <a class="note-card"
+     href="https://gold.lw-gems.com/lab-notes/oro/superficie-y-desgaste-del-oro/">
+    …
+  </a>
+
+</div>
+        
 
         <p style="margin-top:18px">
           <a class="backlink" href="https://gold.lw-gems.com/materials/">← Volver a Materials</a>
