--- a/materials/index.html
+++ b/materials/index.html
@@ -83,9 +83,8 @@
   </script>
 </head>
 
-<body>
+<body class="page-materials">
   <a class="skip-link" href="#content">Saltar al contenido</a>
-
   <header class="topbar" role="banner">
     <div class="container">
       <nav class="topnav" aria-label="Navegación principal">
