--- a/materials/oro/index.html
+++ b/materials/oro/index.html
@@ -76,7 +76,7 @@
   </script>
 </head>
 
-<body>
+<body class="page-materials">
   <a class="skip-link" href="#content">Saltar al contenido</a>
 
   <header class="topbar" role="banner">
