--- a/materials/index.html
+++ b/materials/index.html
@@ -102,20 +102,27 @@
   </header>
 
   <main id="content" class="container" role="main">
-    <section class="lw-index">
-      <header class="lw-index__hero">
-        <p class="kicker">ARCHIVO · MATERIALS</p>
-        <h1 class="title">Materials</h1>
+   <section class="materialsGrid" aria-label="Sub-perfiles de materiales">
 
-        <p class="lead">
-          Archivo de materiales del laboratorio. Cada entrada corresponde a un sub-perfil material
-          tratado desde una lectura técnica y no comercial.
-        </p>
-      </header>
+  <a class="materialCard" href="/materials/oro/">
+    <div class="materialTitle">Oro (Au)</div>
+    <div class="materialDesc">Forma, estructura, superficie y comportamiento del oro como sistema material.</div>
+    <div class="materialMeta">MATERIAL</div>
+  </a>
 
-      <hr class="sep">
+  <a class="materialCard" href="/materials/diamante/">
+    <div class="materialTitle">Diamante (C)</div>
+    <div class="materialDesc">Crecimiento cristalino, defectos, estructura y propiedades del diamante.</div>
+    <div class="materialMeta">MATERIAL</div>
+  </a>
 
-      <section class="lw-index__grid">
+  <a class="materialCard" href="/materials/corindon/">
+    <div class="materialTitle">Corindón (Al₂O₃)</div>
+    <div class="materialDesc">Estructura, defectos, crecimiento y mecanismos que determinan zafiro y rubí.</div>
+    <div class="materialMeta">MATERIAL</div>
+  </a>
+
+</section>
         <a class="note-card" href="https://gold.lw-gems.com/materials/oro/">
           <h2>Oro (Au)</h2>
           <p>Forma, estructura, superficie y comportamiento del oro como sistema material.</p>
