--- a/lab-notes/index.html
+++ b/lab-notes/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Notas técnicas · GOLD NODE</title>
   <meta name="description" content="Notas técnicas sobre oro (Au): superficie, desgaste, fatiga y criterios de uso estructural." />
-  <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="stylesheet" href="/assets/css/lw-system.css">
 </head>
 
 <body class="page-notes-index">
