--- a/lab-notes/index.html
+++ b/lab-notes/index.html
@@ -26,7 +26,7 @@
   </div>
 </header>
 
-<main>
+<main class="container">
   <section class="hero">
     <div class="kicker">Archivo · Oro (Au)</div>
     <h1>Notas técnicas</h1>
