--- a/materials/oro/morfologia-natural-del-oro.html
+++ b/materials/oro/morfologia-natural-del-oro.html
@@ -81,7 +81,6 @@
 <body class="page-note">
   <a class="skip-link" href="#content">Saltar al contenido</a>
 
-  <!-- Header CLONADO del Home/Lab Notes -->
   <header class="topbar">
     <div class="container">
       <div class="brand">
@@ -125,7 +124,6 @@
 
     <hr>
 
-    <!-- TU CUERPO ORIGINAL, sin tocar -->
     <section>
       <h2>1. Definición operativa</h2>
       <p>
@@ -135,7 +133,90 @@
         <em>transporte</em> y <em>reprecipitación</em>. La morfología no es estética: es evidencia.
       </p>
 
-      <!-- ... (todo tu contenido igual) ... -->
+      <h2>2. Crecimiento primario y formas de cristalización</h2>
+      <p>
+        El oro formado <em>in situ</em> en sistemas hidrotermales o magmáticos suele presentar morfologías
+        controladas por la cinética de crecimiento, la disponibilidad de espacio y la composición del fluido.
+        Se observan cristales subhedrales a anhedrales, dendritas ramificadas, filamentos y agregados
+        arborescentes desarrollados en microfracturas o cavidades abiertas.
+      </p>
+      <p>
+        Estas morfologías conservan aristas definidas, superficies con micro-relieve cristalográfico
+        y ausencia de pulido mecánico. La presencia de escalonamientos, intercrecimientos y texturas de
+        crecimiento constituye una señal fuerte de formación primaria.
+      </p>
+
+      <h2>3. Deformación sólida y modificación in situ</h2>
+      <p>
+        El oro puede experimentar deformación sin transporte significativo como resultado de esfuerzos
+        tectónicos, compactación o recristalización. En estos casos se observan granos aplanados,
+        microfracturas internas, soldaduras entre partículas y bordes irregulares no pulidos.
+      </p>
+      <p>
+        Estas modificaciones no generan redondeo sistemático ni superficies lisas continuas. Su correcta
+        interpretación requiere evaluar continuidad estructural, asociación mineral y contexto geológico.
+      </p>
+
+      <h2>4. Liberación y transporte mecánico (placer)</h2>
+      <p>
+        Una vez liberado de la roca hospedante, el oro sometido a transporte hidráulico evoluciona
+        morfológicamente. El retrabajo mecánico produce redondeo progresivo de bordes, aplanamiento por
+        martilleo hidráulico, adelgazamiento de escamas y pulido superficial con pérdida de micro-relieve.
+      </p>
+      <p>
+        El grado de modificación depende de la intensidad y duración del transporte. No existe un umbral
+        único: coexisten estados intermedios con rasgos primarios parcialmente preservados.
+      </p>
+
+      <h2>5. Reprecipitación secundaria y morfologías compuestas</h2>
+      <p>
+        En ambientes supergénicos o de circulación secundaria de fluidos, el oro puede disolverse
+        parcialmente y reprecipitar. Esto genera morfologías compuestas caracterizadas por núcleos
+        redondeados con sobrecrecimientos angulosos, texturas esponjosas o micro-dendritas adheridas a
+        superficies previamente pulidas.
+      </p>
+      <p>
+        Estas formas registran múltiples eventos y no deben interpretarse como evidencia simple de origen
+        primario o placer.
+      </p>
+
+      <h2>6. Lectura diagnóstica: señales y jerarquía</h2>
+      <p>
+        La interpretación morfológica se basa en conjuntos de señales, no en atributos aislados.
+        Aristas vivas y caras planas indican crecimiento primario; pulido homogéneo y redondeo sistemático
+        indican transporte prolongado; sobrecrecimientos y contrastes de textura indican reprecipitación.
+      </p>
+      <p>
+        Tamaño, color o forma general carecen de valor diagnóstico por sí solos.
+      </p>
+
+      <h2>7. Ambigüedad y límites de interpretación</h2>
+      <p>
+        Existen zonas grises donde la morfología no permite una asignación clara. El retrabajo parcial,
+        la deformación y la reprecipitación generan formas híbridas. En estos casos, la ambigüedad debe
+        declararse explícitamente.
+      </p>
+      <p>
+        La morfología describe procesos registrados en el material; no certifica trayectorias completas
+        ni orígenes absolutos.
+      </p>
+
+      <h2>8. Implicancias técnicas y documentales</h2>
+      <p>
+        En contextos de análisis, archivo y evaluación material, la lectura morfológica permite identificar
+        historias de retrabajo, reconocer mezclas de poblaciones y reducir incertidumbre operativa.
+        Su valor reside en informar decisiones, no en cerrarlas artificialmente.
+      </p>
+
+      <h2>9. Síntesis operativa</h2>
+      <p>
+        La morfología del oro es un registro físico de su historia. Leerla correctamente implica reconocer
+        procesos, evaluar conjuntos de señales, aceptar la ambigüedad cuando existe e integrar la lectura
+        con el contexto geológico y material.
+      </p>
+      <p>
+        La geometría observable del oro no decora: registra.
+      </p>
 
       <hr>
 
